4/12/13:decided to make a systembrowser, instead of a classBrowser. started work on it.